user, ownership endpoint
