# internal/dto/user.go
@@ -6,20 +6,23 @@ import (
 )
 
 type BriefUser struct {
-	PubKey        string `json:"pub_key" validate:"required"`
-	ChainId       int    `json:"chain_id" validate:"required"`
+	PubAddr       string `json:"pub_addr" validate:"required"`
+	ChainId       int    `json:"chain_id"`
 	UserId        string `json:"user_id" validate:"required"`
 	FirstName     string `json:"first_name" validate:"required"`
 	LastName      string `json:"last_name" validate:"required"`
-	BirthDay      string `birthday`
+	BirthDay      string `json:"birthday"`
 	Gender        string `json:"gender"`
-	Nationality   string `nationality,validate:"required"`
-	IdFingerprint string `id_fingerprint,validate:"required,md5"`
+	Nationality   string `json:"nationality" validate:"required"`
+	IdFingerprint string `json:"id_fingerprint" validate:"required,sha512"`
 }
 
-func (u *BriefUser) Valid() bool {
-	_, addressErr := types.DecodeAddress(u.PubKey)
+func (u *BriefUser) Valid() error {
+	_, addressErr := types.DecodeAddress(u.PubAddr)
+	if addressErr != nil {
+		return addressErr
+	}
 	validate := validator.New()
 	err := validate.Struct(u)
-	return !(addressErr != nil || err != nil)
+	return err
 }
